--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English drama -- 18th century'
+- GITenberg
 title: A Will and No Will; or, A Bone for the Lawyers. (1746) The New Play Criticiz'd,
   or the Plague of Envy. (1747)
 url: http://www.gutenberg.org/ebooks/40653
